--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -156,4 +156,5 @@ trainer:
   test_freq: -1
   critic_warmup: 0
   default_hdfs_dir: ~/experiments/gsm8k/ppo/${trainer.experiment_name}
-  default_local_dir: /data1/linkdom/checkpoints/${trainer.project_name}/${trainer.experiment_name}
+  ckpt_dir: checkpoints
+  default_local_dir: ${trainer.ckpt_dir}/${trainer.project_name}/${trainer.experiment_name}
